codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__interrupt_preserves_unified_exec_wait_streak.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: snapshot
---
cells=2
• Waiting · primitive: write_stdin(empty stdin poll) · just fix


■ Conversation interrupted - tell the model what to do differently. Something went wrong? Hit `/feedback` to report the issue.
