codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__mcp_startup_header_booting.snap
---
source: tui/src/chatwidget/tests/mcp_startup.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
<<<<<<< f12747ca5e6eb85d32a823b9450726c76ffbb93e
"• Booting MCP server: alpha (0s • esc esc to interrupt)                         "
"                                                                                "
=======
>>>>>>> 7f83d4922d7e92a36c1c1e4f61159a5815d45360
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  gpt-6-astra default · /tmp/project                                            "
