codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__queued_slash_command_while_task_running_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 8033
expression: blob
---
• Queued '/approvals'. It will run after the current task completes.
