codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__reasoning_activity_row_80.snap
---
source: tui/src/chatwidget/tests/reasoning_status_tests.rs
assertion_line: 130
expression: terminal.backend()
---
"• Preparing evidence report (42s • esc esc to interrupt) · 1 background termina…"
